# SPSv2

./: API Documentation.docx  API Documentation.md  README.md  ~$I Documentation.docx  ~WRL0005.tmp
SPSv2/: CMakeLists.txt  commonmodegrid.cpp  component.cpp  component.h  customgraphicswidget.cpp  customgraphicswidget.h  customwidgets.cpp  customwidgets.h  events.cpp  events.h  grid.cpp  grid.h  gridnode.cpp  gridnode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SPSv2/Model/: commonmodegrid.h  dbmanager.cpp  dbmanager.h  grid.cpp  grid.h  gridnode.cpp  gridnode.h
SPSv2/View/: component.cpp  component.h  componentsListViewer.cpp  componentsListViewer.h  customMessageBox.cpp  customMessageBox.h  customgraphicswidget.cpp  customnodetree.cpp  customnodetree.h  customtreeitem.cpp  customtreeitem.h  grideditwindow.cpp  grideditwindow.h  helperFunctions.cpp  helperFunctions.h  systemhierarchyframe.cpp  systemhierarchyframe.h  systemlabel.cpp  systemlabel.h
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Default Database.db  Enter a Name.db  TestingDatabase.db  build.ninja  cmake_install.cmake  myFavoriteDB.db  newName  qrc_resources.cpp  qtcsettings.cmake
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/SPSv2_autogen/: deps  mocs_compilation.cpp
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/SPSv2_autogen/EWIEGA46WW/: moc_component.cpp  moc_component.cpp.d  moc_customgraphicswidget.cpp  moc_customgraphicswidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/SPSv2_autogen/WB4RFHLAU6/: moc_component.cpp.d  moc_componentsListViewer.cpp.d  moc_customMessageBox.cpp  moc_customMessageBox.cpp.d  moc_customgraphicswidget.cpp.d  moc_customnodetree.cpp.d  moc_systemlabel.cpp  moc_systemlabel.cpp.d  qrc_resources.cpp  qrc_thumbnailImages.cpp
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/SPSv2_autogen/include/: ui_mainwindow.h
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Testing/: test.db
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/View/thumbnailImages/: converter.qrc.depends  esm.qrc.depends  line.qrc.depends  load.qrc.depends  resources.qrc.depends  source.qrc.depends  transformer.qrc.depends
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  Default Database.db  build.ninja  cmake_install.cmake  myDB.db  qtcsettings.cmake
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Release/SPSv2_autogen/: deps  mocs_compilation.cpp
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Release/SPSv2_autogen/6KQPTAECHS/: qrc_resources.cpp
build-SPSv2-Desktop_Qt_6_6_1_MinGW_64_bit-Release/SPSv2_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
(+257 files in other folders)
